# phase1-steg-cluster

./: .gitignore  ACTION_PLAN.md  COMPLETE.md  Cargo.toml  DEPLOYMENT_GUIDE_v2.md  DEPLOYMENT_SUMMARY.md  DEVICE_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  EXACT_COMMANDS.md  FINAL_STATUS.txt  GITHUB_DEPLOYMENT.md  GITHUB_PUSH.md  GITHUB_QUICK_START.md  GITHUB_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INSTALL_DEPENDENCIES.md  PHASE2_COMPLETE.md  PROJECT_SUMMARY.md  PUSH_AND_DEPLOY.md  PUSH_READY.md  QUICKSTART.md  QUICK_START.md  README.md  READY_TO_DEPLOY.md  REPORT.md  RESTART_CLUSTER.sh  STATUS_UPDATE.md  docker-compose.yml  integration_tests.sh  nginx.conf  test_failover.sh
config/: cluster.yaml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: lib.rs  metrics.rs  network.rs  raft.rs  redirect.rs  storage.rs  tasks.rs  types.rs
crates/control-plane/tests/: integration_test.rs
crates/loadgen/: Cargo.toml
crates/loadgen/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  main.rs  state.rs
crates/stego/: Cargo.toml
crates/stego/src/: error.rs  lib.rs  lsb.rs  utils.rs
data/node-1/: IDENTITY  LOG  LOG.old.1761687801774623  LOG.old.1761688734666020  LOG.old.1761688778476914  LOG.old.1761688847926573  LOG.old.1761688878841412  LOG.old.1761688989789409  LOG.old.1761690153541827  LOG.old.1761690223500860  LOG.old.1761692027285975  LOG.old.1761723527261515  LOG.old.1761933208135470  LOG.old.1761933905571193  LOG.old.1761933922306209  LOG.old.1761934097077183  LOG.old.1761934655874699  LOG.old.1761934662206401  LOG.old.1761934700426309  LOG.old.1761935032420167  LOG.old.1761935249844282  LOG.old.1761941065629457  LOG.old.1761941141284009  LOG.old.1761941263873610  LOG.old.1761941783101828  LOG.old.1761941844048277  LOG.old.1761943113379965  LOG.old.1761943301052154  LOG.old.1761943584658633  LOG.old.1761943983317051  LOG.old.1761944598229230  LOG.old.1761945388398212  MANIFEST-000049  MANIFEST-000065  MANIFEST-000069  MANIFEST-000077  MANIFEST-000081  MANIFEST-000089  MANIFEST-000097  MANIFEST-000101
static/: app.css  app.js  index.html
