[package]
name = "control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
openraft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sysinfo.workspace = true
dashmap.workspace = true
parking_lot = "0.12"

common = { path = "../common" }
