[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
base64.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
image.workspace = true

common = { path = "../common" }
stego = { path = "../stego" }
control-plane = { path = "../control-plane" }

[dev-dependencies]
tokio-test.workspace = true
reqwest.workspace = true
